<resources>
    <string name="app_name">Pokedex</string>
    <string name="nav_pokedex">Pokedex</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_move_items">Move/Items</string>
    <string name="nav_teams">My teams</string>
    <string name="fl_search">Search pokemon</string>
    <string name="demo_pokemon">Squirtle</string>
    <string name="demo_id_pokemon">#007</string>
    <string name="pokemon_type1">Water</string>
    <string name="pokemon_type2">Poison</string>
    <string name="pokedex">POKÉDEX</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="ability">ability</string>
    <string name="base_stats">Base Stats</string>
    <string name="stat_hp">HP</string>
    <string name="stat_acttack">Attack</string>
    <string name="stat_def">Defense</string>
    <string name="sp_atk">SP.Atk</string>
    <string name="sp_def">SP.Def</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="heightValue">1.70 m</string>
    <string name="weightValue">90.5 kg</string>
    <string name="abilityValue">Blaze, Solar Power</string>
    <string name="evolution_chain">Evolution Chain</string>
    <string name="Description_pokemon">Đây là phần tiểu sử của Pokemon. Nó sẽ dài khoảng 2-3 dòng gì đó.</string>
</resources>